--- a/main.css
+++ b/main.css
@@ -5,13 +5,13 @@ html{
 body{
     margin: 0;
     background-color: black;
-
 }
+
 .wrapper{
-    display: flex;
+    /* display: flex; */
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,.8)),
+    background: 
     url('images/background/back2.jpeg') no-repeat center center fixed;
     background-size: cover;
     position: fixed;
@@ -19,21 +19,50 @@ body{
     right: 0;
     top: 0;
     filter: grayscale(0.9);
-    z-index: -1; 
+    z-index: -3; 
 
-    animation: no-transform /*fade-slide-down*/ 3s ease forwards;
+    animation: no-transform /*fade-slide-down*/ 3s ease forwards,
+        move-bg 10s linear 3s infinite;
     transform: translateY(-10%);
     opacity: 0;
 }
 
-@keyframes no-transform {
-    100%{
-      opacity: 1;
-      transform: none;
+.wrapper::before{
+    content: "";
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,.8)),
+    url('images/background/1.png') no-repeat center center fixed;
+    background-size: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: -1; 
+}
+
+.wrapper::after{
+    content: "";
+    width: 100%;
+    height: 100vh;
+    background: url('images/background/2.png') no-repeat center center fixed;
+    background-size: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: -2; 
+}
+
+@keyframes move-bg {
+    0%, 100% {
+        transform: none;
     }
-  }
-
-
+    50%{
+        transform: translateY(-1.5%);
+    }
+    
+}
 
 nav{
     display: flex;
@@ -53,10 +82,10 @@ nav{
     transform: translateY(-100%) scale(0.8);
 }
 
-nav:hover{
+/* nav:hover{
     opacity: 1;
     transition: .5s;
-}
+} */
 
 .nav-icon{
     display: flex;
@@ -76,7 +105,6 @@ nav:hover{
     filter: brightness(100);
     transition: 0.5s;
 }
-
 
 .login{
     display: flex;
@@ -165,11 +193,48 @@ nav:hover{
     transform: scaleX(1);
 }
 
-
 .parallax-elem{
     height: 90vh;
+    display: flex;
+    justify-content: center;
+}
+
+
+.header-btn-scroll{
+    position: absolute;
+    bottom: 2.5%;
+}
+
+.header-btn-scroll img{
+    animation: no-transform 1s ease 1s forwards,
+        pulse-scroll 1.5s linear 3s infinite;
+    width: 40%;
+    filter: brightness(100);
+    opacity: 0;
+    transform: translateY(100%);
 }
 
 .sect{
+    
     height: 100vh;
+}
+
+/* Animtion */
+
+@keyframes no-transform {
+    100%{
+      opacity: 1;
+      transform: none;
+    }
+  }
+
+@keyframes pulse-scroll {
+    0%,100%{
+        opacity: 1;
+        transform: none;
+    }
+    50%{
+        opacity: .5;
+        transform: scale(.9) translateY(-20%);
+    }
 }
